allprojects {
    apply plugin: 'java'
    group 'org.metalscraps.eso.lang'
    version '1.0'
    sourceCompatibility = 11
    targetCompatibility = 11
    compileJava.options.encoding = "utf-8"
    compileTestJava.options.encoding = "utf-8"

    repositories {
        jcenter()
        mavenCentral()
    }

}

subprojects {
    ext {
        jackson = "2.9.8"
        commonsio = "2.6"
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok:1.18.4'
        annotationProcessor 'org.projectlombok:lombok:1.18.4'
        testCompileOnly 'junit:junit:4.12'
        runtimeOnly 'ch.qos.logback:logback-classic:1.2.3'
        compileOnly 'org.slf4j:slf4j-api:1.7.25'
    }
}